2002-04-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/Makefile.in (install-lib-binaries): Added a missing ;. Bug
	  was introduced by ysterdays change to install a hand-crafted
	  package index file.

	* README.install: Cleared up confusion in the listing which build
	  system goes with which version of the tcl core.

2002-04-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/pkgIndex.tcl: New, manually generated package index.

	* tea/Makefile.in: Install the manually generated package index
	  instead of trying to use "mkIndex" to auto-generate one.

	* generic/bufQueue.c:
	* generic/buf.decls (Buf_QueueWrite): inbuf CONSTified. TIP 27 followup.

	* generic/buf.h (VECTOR): Removed __stdcall for Windows.

	* generic/bufDecls.h: Added BUILD_Memchan dependent change of
	  TCL_STORAGE_CLASS in sections not touched by "genstubs".

	* generic/bufExt.c:
	* generic/bufFix.c:
	* generic/bufRange.c: Added cast to 2nd parameter of "Buf_Create".

	* generic/init.c: Removed EXTERN from Memchan_*Init.
	* generic/memchanInt.h: Added EXTERN declarations for
	  Memchan_*Init, added definition of EWOULDBLOCK.
	
	* tea/mkIndex.tcl.in: Better handling of cygwin paths, look for
	  package without version for generation of index.

2002-04-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tea/Makefile.in (install-lib-binaries): Changed INSTALL_DATA to
	  INSTALL_PROGRAM to accomodate HPUX.

	* generic/null.c: 
	* generic/fifo.c:
	* generic/fifo2.c: More CONSTified API (TIP 27), Output and
	  GetOption.

2002-03-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

        * generic/memchan.c (Seek):      Added WideInt support (TIP 82).
        * generic/memchan.c (Output):    CONSTified API (TIP 27)
        * generic/memchan.c (GetOption): CONSTified API (TIP 27).

2001-11-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Tagged 2.2a2 =============================================
