@@ -1,3 +1,7 @@
+2002-08-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* generic/memchan.c: Reverted Wide changes.
+
 2002-04-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* tea/Makefile.in (install-lib-binaries): Added a missing ;. Bug
